-
Bug
-
Resolution: Done
-
P1: Critical
-
5.0.0
-
None
-
0df026de86a885a7b0acb9138edab14db31d63f7
In most placed where a QSettings object is constructed, the organization is set to "Trolltech".
Nokia Legal wants Qt code to stop using the name Trolltech. For QSettings, this change must happen before Qt 5.0.0 is released, because to change it afterwards would cause shipped Qt5 applications to ignore previously saved settings: something that users are likely to see as similar to a behavioural-compatibility break.
- is required for
-
QTBUG-25005 Critical issues for Qt5 Beta 1
-
- Closed
-
| For Gerrit Dashboard: QTBUG-23269 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 24055,1 | Rename the default organisation from "Trolltech" to "Qt" on Mac | master | qt/qtbase | Status: MERGED | -1 | 0 |
| 41494,1 | Stop using the name "Trolltech" in QSettings | stable | qt/qtbase | Status: MERGED | +2 | 0 |