Rename the default organisation from "Trolltech" to "Qt" on Mac

This doesn't seem to be documented -- or if it was, the documentation
has been changed.

Task-number: QTBUG-23269
Change-Id: Ie7aa51aeb251bfaa3d0018fbac4adc9517c97fa0
Reviewed-by: Lars Knoll <lars.knoll@nokia.com>

cregit: 42e152d5f2d34bec2cb05d8422ebb242fb16d94a https://github.com/qt/qtbase/commit/42e152d5f2d34bec2cb05d8422ebb242fb16d94a